--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -17,10 +17,13 @@
             margin: 0;
             padding: 0;
         }
+      .tr{
+        color: #55f566;
+      }
     </style>
 </head>
 <body>
-<h2>Hello transporter</h2>
+<h2 class="tr">Hello transporter</h2>
 <div id="map"></div>
 <script>
     // Note: This example requires that you consent to location sharing when
